2006-10-26 Andreas Obergrusberger <tradiaz@yahoo.de>
  * updated the galician translation
    by Johám-Luís Miguéns Vila

2006-10-5 Andreas Obergrusberger <tradiaz@yahoo.de>
	* Daniel sent me patches that will show the parent
	  directory in the browse screen title
	*...and a patch that allows the user to specify
	 shortened album names in for example the playlist screen
	 via %shortalbum% 
	
2006-08-8 Andreas Obergrusberger <tradiaz@yahoo.de> 
	* Here it is! the splash screen. asking you for password 
	  everytime and featuring a nice animation :)
	* ncmpc will now always ask for a password when it's not 
	  permitted to execute a command

2006-08-8 Andreas Obergrusberger <tradiaz@yahoo.de> 
	* Avuton fixed some warning
	* fixed a bug that doubled empty lines
	  when loading lyrics from hd

2006-08-7 Andreas Obergrusberger <tradiaz@yahoo.de>
	* bugfixes in lyrics screen
	* ncmpc can now load and save lyrics
	  loading and saving is compatible with gmpc's ~/.lyrics
	* language updates for template and german file

2006-08-6 Andreas Obergrusberger <tradiaz@yahoo.de>
	* fixed a bug in the lyrics screen that made
 	  the first texte line not show up
	* just interrupt running, not upcomming lyrics retrieval

2006-08-5 Andreas Obergrusberger <tradiaz@yahoo.de>
        * the 5th of august... it's dark around me... 
	  there are still flies constantly shitting
          onto my screen's display surface and the search 
          screen works now with new api
          of libmpdclient. enabled by default.
	* building with lyrics screen on gentoo now works... thanks avuton :)
        * updated translation template
        * german lyrics- and search-screen translation added
        * avuton has fixed a lot of warnings
	* fixed a problem with compiling on Arch Linux
	* Added a way to interrupt retrieval of lyrics (ESC)
	 +update of .po files

2006-08-4 Anderas Obergrusberger <tradiaz@yahoo.de>
        * tradiaz is temporary maintainer of a special branch of ncmpc now