@@ -1,3 +1,6 @@
+2006-10-28 Anderas Obergrusberger <tradiaz@yahoo.de>
+  * Daniel has added sorting by caring about LC_COLLATE
+  
 2006-10-26 Andreas Obergrusberger <tradiaz@yahoo.de>
   * updated the galician translation
     by Johám-Luís Miguéns Vila
